Update MyQueue.java