@@ -1,7 +1,6 @@
-package classes;
 
 public class MyQueue<T extends Comparable<T>> implements DataType<T> {
-    private MyLinkedList<T> queue;
+    private MyLinkedList<T> queue; 
 
     public MyQueue() {
         queue = new MyLinkedList<>();
@@ -10,44 +9,41 @@ public class MyQueue<T extends Comparable<T>> implements DataType<T> {
     public void enqueue(T item) {
         queue.addElement(item);
     }
-
     public T dequeue() {
         if (isEmpty()) {
             throw new EmptyQueueException("Queue is empty");
         }
         T item = queue.getElement(0);
-        queue.remove(0);
+        queue.removeFirst(); 
         return item;
     }
 
+
     public boolean isEmpty() {
-        return queue.getSize() == 0;
+        return queue.isEmpty();
     }
 
     public void push(T e) {
-        MyLinkedList<T> linkedList = new MyLinkedList<>();
-        linkedList.addFirst(e);
+        queue.addLast(e); 
     }
-
-
-
+.
     public T pop() {
-        MyLinkedList<T> linkedList = new MyLinkedList<>();
-        T t = linkedList.getLast();
-        linkedList.removeLast();
-        return t;
+        if (isEmpty()) {
+            throw new EmptyQueueException("Queue is empty");
+        }
+        T item = queue.getFirst(); 
+        queue.removeFirst(); 
+        return item;
     }
-
 
     public T get() {
-        MyLinkedList<T> linkedList = new MyLinkedList<>();
-        return linkedList.getLast();
+        if (isEmpty()) {
+            throw new EmptyQueueException("Queue is empty");
+        }
+        return queue.getFirst(); 
     }
-
 
     public int size() {
-        MyLinkedList<T> linkedList = new MyLinkedList<>();
-        return linkedList.size();
+        return queue.size(); 
     }
-
 }
